syntax = "proto3";

package capsule;

import "api/v1/capsule/rollout.proto";

message Config {
  string name = 1;
  string namespace = 2;
  uint64 rollout_id = 3;
  string image = 4;
  api.v1.capsule.ContainerSettings container_settings = 5;
  api.v1.capsule.Network network = 6;
  map<string, string> labels = 7;
  bool auto_add_rig_service_accounts = 8;
  uint32 replicas = 9;
  // TODO: this should not be in the config directly.
  Auth registry_auth = 10;
  repeated api.v1.capsule.ConfigFile config_files = 11;
}

message Auth {
  string host = 1;
  string username = 2;
  string password = 3;
}
